[MWPW-174142] Fix alignment of tip section when text goes to next line (#459)
* Fix alignment of tip section when text goes to next line

Resolves: [MWPW-174142](https://jira.corp.adobe.com/browse/MWPW-174142)

**Test URLs:**
- Before:
https://stage--cc--adobecom.hlx.live/creativecloud/animation/testdoc/unity/unity-firefly?unitylibs=ff-uifixes
- After:
https://stage--cc--adobecom.hlx.live/creativecloud/animation/testdoc/unity/unity-firefly?unitylibs=landscape-mode

--- a/unitylibs/core/workflow/workflow-firefly/widget.css
+++ b/unitylibs/core/workflow/workflow-firefly/widget.css
@@ -509,6 +509,15 @@
   line-height: var(--type-detail-s-lh);
 }
 
+.unity-enabled .interactive-area .ex-unity-wrap .ex-unity-widget .drop .drop-footer .tip-con,
+.unity-enabled .interactive-area .ex-unity-wrap .ex-unity-widget .drop .drop-footer .tip-con .tip-text,
+.unity-enabled .interactive-area .ex-unity-wrap .ex-unity-widget .drop .drop-footer .tip-con .tip-desc,
+.unity-enabled .interactive-area .ex-unity-wrap .ex-unity-widget .drop .drop-footer .legal-con .legal-text {
+  text-align: start;
+  justify-content: flex-start;
+  align-items: flex-start;
+}
+
 .unity-enabled .interactive-area .ex-unity-wrap .ex-unity-widget .drop .drop-footer .legal-con .legal-text:focus {
   outline: 2px solid #005FCC;
 }
